[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupiter-signal"
version = "0.1.0"
description = "AI-assisted multi-API correlation engine for Jupiter's Developer Platform — cross-references Price, Tokens, and Prediction Markets APIs to detect trading signals and generate Trigger API orders."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Atlas Nexus" }]
keywords = ["jupiter", "solana", "defi", "trading", "prediction-markets", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
jupiter-signal = "jupiter_signal.cli:main"

[tool.setuptools.packages.find]
include = ["jupiter_signal*"]

[tool.ruff]
line-length = 100
target-version = "py310"
